--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "lint": "eslint \"src/**\" --quiet --fix",
     "lint-ci": "eslint \"src/**\" --quiet",
     "test": "echo Specify a test script in package.json to run tests",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier -w src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@octokit/types": "^6.22.0",
+    "dotenv": "^10.0.0",
+    "octokit": "^1.1.0",
+    "pino": "^6.13.0"
+  },
   "devDependencies": {
-    "@types/express": "^4.17.12",
+    "@types/pino": "^6.3.11",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.25.0",
     "eslint": "^7.27.0",
@@ -28,11 +34,13 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "husky": "^6.0.0",
     "nodemon": "^2.0.7",
+    "pino-pretty": "^5.1.2",
+    "prettier": "2.3.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2",
-    "husky": "^6.0.0"
+    "typescript": "^4.3.2"
   },
   "nodemonConfig": {
     "watch": [
