--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pino": "^6.13.0"
   },
   "devDependencies": {
+    "@octokit/openapi-types": "^9.3.0",
     "@types/pino": "^6.3.11",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.25.0",
