--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@needssoysauce/dumbdb",
   "version": "0.1.0",
   "description": "Dumb database that is dumb.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NeedsSoySauce/dumbdb.git"
+  },
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon",
@@ -54,5 +58,8 @@
     "ext": ".ts,.js",
     "ignore": [],
     "exec": "npm run prettier && npm run lint && ts-node ./src/index.ts"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
