--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,24 +4,24 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: [ main, dev ]
+    branches-ignore: ["main"]
 
 jobs:
   check:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-  
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
+      - uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: npm ci
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14.x"
 
-    - name: Check linting
-      run: npm run lint-ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run tests
-      run: npm run test --if-present
+      - name: Check linting
+        run: npm run lint-ci
+
+      - name: Run tests
+        run: npm run test --if-present
