fix: build step not outputting new version

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    outputs:
+      new-version: ${{ steps.auto-version.outputs.new-version }} 
 
     steps:
       - uses: actions/checkout@v2
