--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "type": "git",
     "url": "https://github.com/NeedsSoySauce/dumbdb.git"
   },
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "dev": "nodemon",
     "start": "node build/index.js",
     "clean": "rimraf build",
     "copy": "copyfiles package.json LICENSE README.md build",
-    "build": "npm run clean && tsc && npm run copy",
+    "build": "npm run clean && parcel build && npm run copy",
     "pub": "npm publish build --access public",
     "lint": "eslint \"src/**\" --quiet --fix",
     "lint-ci": "eslint \"src/**\" --quiet",
@@ -23,33 +23,35 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@octokit/types": "^6.22.0",
-    "async-mutex": "^0.3.1",
-    "dotenv": "^10.0.0",
-    "octokit": "^1.1.0",
-    "pino": "^6.13.0"
+    "@octokit/types": "^9.0.0",
+    "async-mutex": "^0.4.0",
+    "dotenv": "^16.0.3",
+    "octokit": "^2.0.13"
   },
   "devDependencies": {
-    "@octokit/openapi-types": "^9.3.0",
-    "@types/pino": "^6.3.11",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@octokit/openapi-types": "^16.0.0",
+    "@parcel/packager-ts": "^2.8.3",
+    "@parcel/transformer-typescript-types": "^2.8.3",
+    "@types/node": "^18.11.18",
+    "@types/pino": "^7.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "buffer": "^5.7.1",
     "copyfiles": "^2.4.1",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "husky": "^6.0.0",
-    "nodemon": "^2.0.7",
-    "pino-pretty": "^5.1.2",
-    "prettier": "2.3.2",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "nodemon": "^2.0.20",
+    "prettier": "2.8.3",
+    "rimraf": "^4.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "nodemonConfig": {
     "watch": [
