--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "start": "node build/index.js",
     "clean": "rimraf build",
     "copy": "copyfiles package.json LICENSE README.md build",
-    "build": "npm run clean && parcel build && npm run copy",
+    "build": "webpack --mode=production --node-env=production && npm run copy",
     "pub": "npm publish build --access public",
     "lint": "eslint \"src/**\" --quiet --fix",
     "lint-ci": "eslint \"src/**\" --quiet",
     "test": "echo Specify a test script in package.json to run tests",
-    "prettier": "prettier -w src"
+    "prettier": "prettier -w src",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +39,7 @@
     "@types/pino": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "@webpack-cli/generators": "^3.0.1",
     "buffer": "^5.7.1",
     "copyfiles": "^2.4.1",
     "eslint": "^8.32.0",
@@ -50,8 +54,11 @@
     "nodemon": "^2.0.20",
     "prettier": "2.8.3",
     "rimraf": "^4.1.1",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "nodemonConfig": {
     "watch": [
