--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "main": "build/index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "node build/index.js",
-    "clean": "rimraf build",
-    "copy": "copyfiles package.json LICENSE README.md build",
-    "build": "webpack --mode=production --node-env=production && npm run copy",
-    "pub": "npm publish build --access public",
+    "start": "node dist/index.js",
+    "clean": "rimraf dist",
+    "build": "webpack --mode=production --node-env=production",
+    "pub": "npm publish dist --access public",
     "lint": "eslint \"src/**\" --quiet --fix",
     "lint-ci": "eslint \"src/**\" --quiet",
     "test": "echo Specify a test script in package.json to run tests",
